--- a/docker-ci-pipeline/Jenkinsfile
+++ b/docker-ci-pipeline/Jenkinsfile
@@ -1,3 +1,4 @@
+def dockerImage
 def COLOR_MAP = [
     'SUCCESS': 'good',
     'FAILURE': 'danger',
@@ -103,3 +104,4 @@ pipeline {
         }
     }
 }
+
